Added player character and gamemode class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=AIRace
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/L_MainMenu.L_MainMenu
-GameDefaultMap=/Game/Levels/L_MainMenu.L_MainMenu
+EditorStartupMap=/Game/AIRace/Levels/L_AIRace.L_AIRace
+GameDefaultMap=/Game/AIRace/Levels/L_AIRace.L_AIRace
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
