Changed copytight, added ai character

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=26D82E784AC23E320FE2499253ACDF69
-ProjectName=Third Person BP Game Template
+ProjectName=AI Race
+CopyrightNotice=This project is made for a test assignment
 
 [StartupActions]
 bAddPacks=True
@@ -8,3 +9,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
