Score code refactoring, added bots stats widget

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,7 +4,7 @@ ProjectName=AI Race
 CopyrightNotice=This project is made for a test assignment
 
 [StartupActions]
-bAddPacks=True
+bAddPacks=False
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
